chore: update example to use manual replication

--- a/examples/react-datastore/package.json
+++ b/examples/react-datastore/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
+    "@ant-design/icons": "~4.2.1",
     "@apollo/react-hooks": "^3.1.5",
     "@capacitor-community/sqlite": "^2.4.0",
     "@capacitor/android": "2.4.0",
@@ -14,9 +14,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "antd": "^4.4.1",
+    "antd": "~4.4.1",
     "graphql.macro": "^1.4.2",
-    "offix-datastore": "0.1.1",
+    "offix-datastore": "0.3.17",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
