--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,7 @@
     ":pinVersions"
   ],
   "groupName":"all",
-  "automerge": true,
+  "automerge": false,
   "major": {
     "automerge": false
   },
