--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "dependencies": {
     "@types/mocha": "8.2.1",
-    "@types/node": "12.20.1"
+    "@types/node": "12.20.1",
+    "vue": "^3.0.6"
   },
   "workspaces": [
     "packages/*/*"
