--- a/packages/datastore/datastore/package.json
+++ b/packages/datastore/datastore/package.json
@@ -45,7 +45,8 @@
     "size-limit": "4.9.2",
     "supports-color": "8.1.1",
     "ts-jest": "26.5.1",
-    "typescript": "4.1.5"
+    "typescript": "4.1.5",
+    "vue": "^3.0.6"
   },
   "dependencies": {
     "graphql-tag": "2.11.0",
