--- a/examples/vue-datastore/.gitignore
+++ b/examples/vue-datastore/.gitignore
@@ -19,9 +19,11 @@
 .env.production.local
 .gradle
 
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 /android
 /ios
