--- a/examples/vue-datastore/package.json
+++ b/examples/vue-datastore/package.json
@@ -1,44 +1,12 @@
 {
-  "name": "react-offix",
+  "name": "vue-datastore",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@ant-design/icons": "~4.2.1",
-    "@apollo/react-hooks": "^3.1.5",
-    "@capacitor-community/sqlite": "^2.4.0",
-    "@capacitor/android": "2.4.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "antd": "~4.4.1",
-    "graphql.macro": "^1.4.2",
-    "offix-datastore": "0.4.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "4.1.5",
-    "uniforms": "3.0.0-alpha.5",
-    "uniforms-antd": "3.0.0-alpha.5",
-    "uniforms-bridge-graphql": "3.0.0-alpha.5",
-    "uuidv4": "^6.1.1",
-    "@capacitor/core": "^2.4.0"
-  },
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "startServer": "gqlserve serve --datasync --conflict=clientSideWins --port=5400 ./src/model/runtime.graphql",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate": "offix generate --schema ./src/model/runtime.graphql --outputPath ./src/datastore/generated",
-    "linkdatastore": "cd ../../packages/datastore/datastore && yarn link && cd - && yarn link offix-datastore && rm -Rf ./node_modules/react && && rm -Rf ./node_modules/react-dom",
-    "linkdatastorecli": "cd ../../packages/datastore/cli && yarn link && cd - && yarn link @offix/cli"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "startServer": "gqlserve serve --datasync --conflict=clientSideWins --port=5400 ./src/model/runtime.graphql"
   },
   "browserslist": {
     "production": [
@@ -52,10 +20,38 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@ant-design/icons-vue": "^6.0.1",
+    "ant-design-vue": "^2.0.1",
+    "core-js": "^3.6.5",
+    "offix-datastore": "^0.4.0",
+    "register-service-worker": "^1.7.1",
+    "vue": "^3.0.6",
+    "graphql.macro": "^1.4.2"
+  },
   "devDependencies": {
-    "@capacitor/cli": "^2.4.0",
-    "@offix/cli": "0.2.1",
-    "graphback-cli": "1.1.1",
-    "graphql-serve": "1.1.1"
+    "@offix/cli": "^0.3.3",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.0",
+    "@vue/cli-plugin-typescript": "^4.5.0",
+    "@vue/cli-service": "^4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "babel-plugin-import": "^1.13.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "graphback-cli": "^1.1.2",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
+    "prettier": "^1.19.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "typescript": "^4.2.2",
+    "graphql-serve": "1.1.2"
   }
 }
