--- a/examples/vue-datastore/package.json
+++ b/examples/vue-datastore/package.json
@@ -1,12 +1,15 @@
 {
   "name": "vue-datastore",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "startServer": "gqlserve serve --datasync --conflict=clientSideWins --port=5400 ./src/model/runtime.graphql"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "upgrade-next": "yarn yarn-upgrade-all add vue@next ant-design-vue@next",
+    "generate": "offix generate --schema ./src/model/runtime.graphql --outputPath ./src/datastore/generated",
+    "startServer": "gqlserve serve --datasync --conflict=clientSideWins --port=5400 ./src/model/runtime.graphql",
+    "linkdatastore": "cd ../../packages/datastore/datastore && yarn link && cd - && yarn link offix-datastore && rm -Rf ./node_modules/react && && rm -Rf ./node_modules/react-dom",
+    "linkdatastorecli": "cd ../../packages/datastore/cli && yarn link && cd - && yarn link @offix/cli"
   },
   "browserslist": {
     "production": [
@@ -21,37 +24,26 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^6.0.1",
+    "@ant-design/colors": "^6.0.0",
     "ant-design-vue": "^2.0.1",
-    "core-js": "^3.6.5",
     "offix-datastore": "^0.4.0",
-    "register-service-worker": "^1.7.1",
     "vue": "^3.0.6",
-    "graphql.macro": "^1.4.2"
+    "@ant-design/icons-vue": "^6.0.1"
   },
   "devDependencies": {
     "@offix/cli": "^0.3.3",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "^4.5.0",
-    "@vue/cli-plugin-eslint": "^4.5.0",
-    "@vue/cli-plugin-pwa": "^4.5.0",
-    "@vue/cli-plugin-typescript": "^4.5.0",
-    "@vue/cli-service": "^4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@types/node": "^14.14.31",
+    "@vitejs/plugin-vue": "^1.1.4",
+    "@vitejs/plugin-vue-jsx": "^1.1.2",
+    "@vue/compiler-sfc": "^3.0.5",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint": "^7.21.0",
+    "eslint-plugin-vue": "^7.6.0",
     "graphback-cli": "^1.1.2",
-    "less": "^4.1.1",
-    "less-loader": "^8.0.0",
-    "prettier": "^1.19.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "graphql-serve": "1.1.2",
+    "sass": "^1.32.8",
     "typescript": "^4.2.2",
-    "graphql-serve": "1.1.2"
+    "vite": "^2.0.4",
+    "yarn-upgrade-all": "^0.5.4"
   }
 }
