--- a/packages/datastore/datastore/tsconfig.json
+++ b/packages/datastore/datastore/tsconfig.json
@@ -1,23 +1,12 @@
 {
   "extends": "../../../tsconfig.json",
-  "include": [
-    "./src/**/*.ts", "*.d.ts"
-  ],
+  "include": ["./src/**/*.ts", "*.d.ts"],
   "compilerOptions": {
     "esModuleInterop": true,
     "sourceMap": false,
     "outDir": "./dist/",
     "declarationDir": "./types",
-    "lib": [
-      "esnext.asynciterable",
-      "es2015",
-      "dom",
-      "es2016"
-    ],
-    "types": [
-      "websql",
-      "jest",
-      "node"
-    ],
+    "lib": ["esnext.asynciterable", "es2015", "dom", "es2016"],
+    "types": ["websql", "jest", "node"]
   }
 }
