--- a/packages/datastore/datastore/package.json
+++ b/packages/datastore/datastore/package.json
@@ -21,7 +21,8 @@
     "size:why": "size-limit --why"
   },
   "peerDependencies": {
-    "react": "17.0.1"
+    "react": "17.0.1",
+    "vue": "3.0.6"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -46,7 +47,7 @@
     "supports-color": "8.1.1",
     "ts-jest": "26.5.1",
     "typescript": "4.1.5",
-    "vue": "^3.0.6"
+    "vue": "3.0.6"
   },
   "dependencies": {
     "graphql-tag": "2.11.0",
