--- a/packages/datastore/datastore/tsconfig.json
+++ b/packages/datastore/datastore/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": false,
     "outDir": "./dist/",
     "declarationDir": "./types",
-    "lib": ["esnext.asynciterable", "es2015", "dom", "es2016"],
+    "lib": ["esnext.asynciterable", "es2015", "dom", "es2016", "es2020"],
     "types": ["websql", "jest", "node"]
   }
 }
