--- a/packages/datastore/datastore/tsconfig.json
+++ b/packages/datastore/datastore/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
     "sourceMap": false,
     "outDir": "./dist/",
+    "skipLibCheck": true,
     "declarationDir": "./types",
     "lib": ["esnext.asynciterable", "es2015", "dom", "es2016", "es2020"],
     "types": ["websql", "jest", "node"]
