--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "size": "size-limit",
     "cleanInstall": "lerna exec yarn install --ignore-scripts",
     "bootstrap": "lerna bootstrap --no-ci",
-    "lint": "eslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
-    "lint-fix": "eslint '*/*/src/**/*.ts' '*/*/test/**/*.ts' --fix",
+    "lint": "eslint '*/*/src/**/*.ts' '*/*/tests/**/*.ts'",
+    "lint-fix": "eslint '*/*/src/**/*.ts' '*/*/tests/**/*.ts' --fix",
     "build": "lerna run build",
     "watch": "lerna run watch",
     "release:prep": "./scripts/prepareRelease.sh",
