fix: build issue

--- a/packages/datastore/package.json
+++ b/packages/datastore/package.json
@@ -30,12 +30,14 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.9.2",
+    "@types/debug": "^4.1.5",
     "@types/jest": "26.0.20",
     "@types/json-schema": "7.0.7",
     "@types/react-dom": "17.0.1",
     "@types/traverse": "0.6.32",
     "@types/uuid": "8.3.0",
     "@types/websql": "0.0.27",
+    "@types/zen-observable": "^0.8.2",
     "apollo-server": "2.21.0",
     "debug": "4.3.1",
     "fake-indexeddb": "3.1.2",
