--- a/packages/offix/conflicts-client/package.json
+++ b/packages/offix/conflicts-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-conflicts-client",
-  "version": "0.15.6",
+  "version": "0.15.7",
   "description": "adds client side conflict detection and resolution",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -9,7 +9,8 @@
     "watch": "tsc --watch",
     "test": "jest",
     "size": "size-limit",
-    "size:why": "size-limit --why"
+    "size:why": "size-limit --why",
+    "postinstall": "node postinstall.js"
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.9.2",
