--- a/packages/offix/react-hooks/package.json
+++ b/packages/offix/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-offix-hooks",
-  "version": "0.15.6",
+  "version": "0.15.7",
   "description": "Use offix-client in react hooks",
   "keywords": [
     "offix",
@@ -17,7 +17,8 @@
     "preintegration-test": "cd integration_test && npm install",
     "integration-test": "cd integration_test && npm test",
     "size": "size-limit",
-    "size:why": "size-limit --why"
+    "size:why": "size-limit --why",
+    "postinstall": "node postinstall.js"
   },
   "license": "Apache-2.0",
   "repository": {
@@ -48,7 +49,7 @@
     "typescript": "4.1.5"
   },
   "dependencies": {
-    "offix-client": "0.15.6",
+    "offix-client": "0.15.7",
     "react": "17.0.1"
   },
   "peerDependencies": {
